2005-09-21 arne

	* mac: make it compatible again with Mac OS X < 10.4
	* mac: complete new mouse handling
	* adding CVSTGUITimer class, currently needed in CScrollView
	* win: added new mouse handling
	* win: first GDI+ stuff (oh it's slow, slow, slow ... needs much work I guess)

2005-09-08 arne

	* added some kind of tooltip support
		- if the mouse comes over a view which has a kCViewTooltipAttribute, the tooltip view, which can be set on the frame, is changed to the string in the attribute
	* fix some stuff with the new mouse handling
	
2005-09-02 arne

	* added new interface class for communicating stuff between CFrame and Editor : VSTGUIEditorInterface.
	* because of this the makro PLUGGUI is obsolete and removed.
	* specific VST stuff is now enclosed by ENABLE_VST_EXTENSION_IN_VSTGUI like the CFileSelector stuff, where the host is asked about showing a File Chooser. If you need it, define it and set it to 1.
	* AEffGUIEditor is now subclassed from AEffEditor and VSTGUIEditorInterface (the most common compiler error now is, that you need to include "aeffguieditor.h" in your editor class header)

2005-08-31 arne

	* new mouse handling (onMouseDown, onMouseUp, onMouseMoved, onMouseEntered, onMouseExited)
	  but the old mouse method is still working, if the new methods are not implemented by the super class
	* drawing is now triggered by system events, so drawing outside of the draw method is deprecated

		This means :
	  	- all class methods which took a CDrawContext pointer will be changed except the draw methods.
	  	- you call view->invalid () instead of view->setDirty (true) from the User Interface thread.
	  	- value changes from other threads will be checked on idle and the views are marked invalid.

		Benefits :
		- less hacks
		- less code
		- cleaner differentiation of drawing and user action.
		- works better with hosts which don't follow the VST spec.

	* added controlBeginEdit and controlEndEdit to CControlListener

2005-08-22 arne
